--- a/Use_Package_Managers.yaml
+++ b/Use_Package_Managers.yaml
@@ -1,5 +1,5 @@
 curator: charlotte
-goal: Keep Your Files Together with Package Managers
+goal: Use Package Managers
 checkpoints:
   - task: Manage in Packages
     resource-url: 'http://www.rpm.org/max-rpm/ch-intro-to-rpm.html'
