small changes, can go live

--- a/Create_Good_Designs_Quickly_With_Bootstrap.yaml
+++ b/Create_Good_Designs_Quickly_With_Bootstrap.yaml
@@ -1,5 +1,5 @@
 curator: charlotte
-goal: Create Good Designs Quickly with Bootstrap
+goal: Design Good and Quickly with Bootstrap
 checkpoints:
   - task: Discover Bootstrap
     resource-url: 'http://campus.codeschool.com/courses/blasting-off-with-bootstrap/contents'
