--- a/Install_Node.yaml
+++ b/Install_Node.yaml
@@ -1,9 +1,11 @@
 curator: charlotte
 goal: Install Node
 checkpoints:
-  - task: Know a Little Bit about Node
+  - task: Learn Just Enough Node
     resource-url: 'http://blog.modulus.io/absolute-beginners-guide-to-nodejs'
   - task: Install Node on Mac
     resource-url: 'https://thenewboston.com/videos.php?cat=355&video=29987'
+  - task: Install Node on Linux
+    resource-url: 'https://www.digitalocean.com/community/tutorials/how-to-install-node-js-on-ubuntu-16-04'
   - task: Install Node on Windows
     resource-url: 'http://blog.teamtreehouse.com/install-node-js-npm-windows'
