--- a/Install_Node.yaml
+++ b/Install_Node.yaml
@@ -1,11 +1,10 @@
-curator: charlotte
 goal: Install Node
 checkpoints:
   - task: Learn Just Enough Node
-    resource-url: 'http://blog.modulus.io/absolute-beginners-guide-to-nodejs'
+    resource-url: 'nodeguide.com/beginner.html/'
   - task: Install Node on Mac
-    resource-url: 'https://thenewboston.com/videos.php?cat=355&video=29987'
+    resource-url: 'https://thenewboston.com/videos.php?cat=355&video=29987/'
   - task: Install Node on Linux
-    resource-url: 'https://www.digitalocean.com/community/tutorials/how-to-install-node-js-on-ubuntu-16-04'
+    resource-url: 'https://www.digitalocean.com/community/tutorials/how-to-install-node-js-on-ubuntu-16-04/'
   - task: Install Node on Windows
-    resource-url: 'http://blog.teamtreehouse.com/install-node-js-npm-windows'
+    resource-url: 'http://blog.teamtreehouse.com/install-node-js-npm-windows/'
