--- a/Use_Code_Libraries.yaml
+++ b/Use_Code_Libraries.yaml
@@ -1,12 +1,11 @@
-curator: charlotte
-goal: Make Use of Libraries
+goal: Use Code Libraries
 checkpoints:
-  - task: Use other People\'s Code
-    resource-url: 'https://www.smashingmagazine.com/2011/06/working-with-external-code-libraries'
+  - task: "Use other People's Code"
+    resource-url: 'https://www.smashingmagazine.com/2011/06/working-with-external-code-libraries/'
   - task: Discover the Best JS Libraries
-    resource-url: 'http://bestof.js.org/search/library'
+    resource-url: 'http://bestof.js.org/search/library/'
   - task: Include Libraries in Your Code
-    resource-url: 'http://www.javascriptkit.com/javatutors/external.shtml'
+    resource-url: 'http://www.javascriptkit.com/javatutors/external.shtml/'
   - task: Understand Why You Should (Not) Use Libraries
-    resource-url: 'https://www.quora.com/What-does-library-mean-in-the-case-of-programming-languages'
+    resource-url: 'https://www.quora.com/What-does-library-mean-in-the-case-of-programming-languages/'
 
